# sally

./: .gitignore  CMakeLists.txt  CMakePresets.json  CROSS-BUILD-PROGRESS.md  CROSS-JUDGEMENT.md  README.md  more_work.md
src/plugins/: CMakeLists.txt
src/plugins/7zip/: 7zclient.cpp  7zclient.h  7zip.cpp  7zip.def  7zip.h  7zip.rc  7zthreads.cpp  7zthreads.h  CMakeLists.txt  FStreams.cpp  FStreams.h  dialogs.cpp  dialogs.h  extract.cpp  extract.h  open.cpp  open.h  precomp.cpp  precomp.h  structs.h  update.cpp  update.h  versinfo.rh2
src/plugins/automation/: CMakeLists.txt  abortmodal.cpp  abortmodal.h  abortpalette.cpp  abortpalette.h  automation.rc  automation.rc2  automationplug.cpp  automationplug.h  aututils.cpp  aututils.h  cfgdlg.cpp  cfgdlg.h  dialogimpl.cpp  dialogimpl.h  dispimpl.h  engassoc.cpp  engassoc.h  entry.cpp  fileinfo.cpp  fileinfo.h  guibutton.cpp  guibutton.h  guichkbox.cpp  guichkbox.h  guicomponent.cpp  guicomponent.h  guicontainer.cpp  guicontainer.h  guidefs.h  guiform.cpp  guiform.h  guilabel.cpp  guilabel.h  guinamespace.cpp  guinamespace.h  guitxtbox.cpp  guitxtbox.h  inputbox.h  itemaut.cpp  (+37 more)
src/plugins/checksum/: CMakeLists.txt  checksum.cpp  checksum.def  checksum.h  checksum.rc  dialogs.cpp  dialogs.h  misc.cpp  misc.h  precomp.cpp  precomp.h  versinfo.rh2  wrappers.cpp  wrappers.h
src/plugins/checkver/: CMakeLists.txt  checkver.cpp  checkver.def  checkver.h  checkver.rc  checkver.rc2  checkver.rh2  data.cpp  dialogs.cpp  github_release.cpp  github_release.h  internet.cpp  logwnd.cpp  precomp.cpp  precomp.h  versinfo.rh2
src/plugins/dbviewer/: CMakeLists.txt  const.h  data.cpp  data.h  dbviewer.cpp  dbviewer.def  dbviewer.h  dbviewer.rc  dialogs.cpp  dialogs.h  parser.cpp  parser.h  precomp.cpp  precomp.h  renderer.h  renmain.cpp  renpaint.cpp  versinfo.rh2
src/plugins/demomenu/: demomenu.cpp  demomenu.def  demomenu.h  demomenu.rc  menu.cpp  precomp.cpp  precomp.h  versinfo.rh2
src/plugins/demoplug/: CMakeLists.txt  archiver.cpp  demoplug.cpp  demoplug.def  demoplug.h  demoplug.rc  demoplug.rc2  dialogs.cpp  dialogs.h  fs1.cpp  fs2.cpp  fs_init.cpp  fs_operations.cpp  menu.cpp  precomp.cpp  precomp.h  thumbldr.cpp  versinfo.rh2  viewer.cpp
src/plugins/demoview/: demoview.cpp  demoview.def  demoview.h  demoview.rc  demoview.rc2  dialogs.cpp  dialogs.h  menu.cpp  precomp.cpp  precomp.h  thumbldr.cpp  versinfo.rh2  viewer.cpp
src/plugins/diskmap/: CMakeLists.txt
src/plugins/filecomp/: CMakeLists.txt  controls.cpp  controls.h  cwbase.cpp  cwbase.h  cwoptim.cpp  cwoptim.h  cwstrict.cpp  cwstrict.h  dialogs.cpp  dialogs.h  dialogs2.cpp  dialogs3.cpp  dialogs4.cpp  dlg_com.cpp  dlg_com.h  filecache.cpp  filecache.h  filecomp.cpp  filecomp.def  filecomp.h  filecomp.rc  filemap.cpp  filemap.h  mainwnd.cpp  mainwnd.h  mtxtout.cpp  mtxtout.h  precomp.h  profile.cpp  remote.cpp  remote.h  remotmsg.h  textio.cpp  textio.h  versinfo.rh2  viewtext.cpp  viewtext.h  viewwnd.cpp  viewwnd.h  (+7 more)
src/plugins/folders/: CMakeLists.txt  dialogs.cpp  dialogs.h  folders.cpp  folders.def  folders.h  folders.rc  folders.rc2  fs1.cpp  fs2.cpp  fs_init.cpp  fs_operations.cpp  iltools.cpp  iltools.h  precomp.cpp  precomp.h  versinfo.rh2
src/plugins/ftp/: ctrlcon.h  ctrlcon1.cpp  ctrlcon2.cpp  ctrlcon3.cpp  ctrlcon4.cpp  ctrlcon5.cpp  datacon.h  datacon1.cpp  datacon2.cpp  dialogs.h  dialogs1.cpp  dialogs2.cpp  dialogs3.cpp  dialogs4.cpp  dialogs5.cpp  dialogs6.cpp  dialogs7.cpp  dialogs8.cpp  fs1.cpp  fs2.cpp  fs3.cpp  fs4.cpp  fs5.cpp  ftp.cpp  ftp.def  ftp.h  ftp.rc  ftp2.cpp  ftp3.cpp  ftp4.cpp  ftputils.cpp  ftputils.h  menu.cpp  operats.h  operats1.cpp  operats2.cpp  operats3.cpp  operats4.cpp  operats5.cpp  operats6.cpp  (+16 more)
src/plugins/ieviewer/: ieviewer.cpp  ieviewer.h  ieviewer.rc  markdown.cpp  markdown.h  precomp.cpp  precomp.h  versinfo.rh2
src/plugins/mmviewer/: CMakeLists.txt  buffer.cpp  buffer.h  dialogs.cpp  dialogs.h  exporthtml.cpp  exportxml.cpp  mmviewer.cpp  mmviewer.def  mmviewer.h  mmviewer.rc  mmviewer.rc2  output.cpp  output.h  parser.cpp  parser.h  precomp.h  renderer.h  renmain.cpp  renpaint.cpp  versinfo.rh2
src/plugins/nethood/: CMakeLists.txt  cache.cpp  cache.h  cfgdlg.cpp  cfgdlg.h  config.h  entry.cpp  globals.cpp  globals.h  icons.cpp  icons.h  nethood.cpp  nethood.h  nethood.rc  nethood_fs_operations.cpp  nethooddata.cpp  nethooddata.h  nethoodfs.cpp  nethoodfs.h  nethoodfs2.cpp  nethoodfs2.h  nethoodmenu.cpp  nethoodmenu.h  precomp.cpp  precomp.h  salutils.cpp  salutils.h  tree.h  versinfo.rh2
src/plugins/pak/: CMakeLists.txt  pak.def
src/plugins/peviewer/: BinaryReader.h  CMakeLists.txt  SortedStringList.h  cfg.cpp  cfg.h  cfgdlg.cpp  cfgdlg.h  dump_dbg.h  dump_res.cpp  dump_res.h  pefile.cpp  pefile.h  peviewer.cpp  peviewer.def  peviewer.h  peviewer.rc  precomp.h  versinfo.rh2
src/plugins/pictview/: PVEXEWrapper.cpp  PVEXEWrapper.h  PVEnvelope.cpp  PVMessage.cpp  PVMessage.h  PVMessageEnvelope.cpp  PVMessageWrapper.cpp  PixelAccess.cpp  PixelAccess.h  Thumbnailer.cpp  Thumbnailer.h  dialogs.cpp  dialogs.h  histwnd.cpp  histwnd.h  pictview.cpp  pictview.def  pictview.h  pictview.rc  pictview.rc2  precomp.cpp  precomp.h  print.cpp  pvtwain.cpp  pvtwain.h  render1.cpp  render2.cpp  renderer.h  salpvenv.rc  saveas.cpp  statsbar.cpp  thumbs.cpp  utils.cpp  utils.h  versinfo.rh2  wiawrap.cpp  wiawrap.h
src/plugins/portables/: CMakeLists.txt  config.h  device.cpp  device.h  entry.cpp  fx.cpp  fx.h  fx_errcodes.h  fx_lang.rc2  fxfs.cpp  fxfs.h  globals.cpp  globals.h  notifier.cpp  notifier.h  portables.def  precomp.cpp  precomp.h  versinfo.rh2  wpd.rc  wpd.rc2  wpddeviceicons.cpp  wpddeviceicons.h  wpdfs.cpp  wpdfs.h  wpdfscontentlevel.cpp  wpdfscontentlevel.h  wpdfsdevicelevel.cpp  wpdfsdevicelevel.h  wpdhelpers.h  wpdplug.cpp  wpdplug.h  (+1 more)
src/tests/: CMakeLists.txt  CMakeLists.txt.gtest  fsutil_standalone.cpp  gtest_prompter.cpp  pathutils_standalone.cpp  salgetfullname_standalone.cpp  salpath_standalone.cpp  test_fsutil.cpp  test_fsutil_strings.cpp  test_longpath.cpp  test_operations.cpp  widepath_standalone.cpp
(+2058 files in other folders)
