# Plugin build entrypoint for Sally

include_guard(GLOBAL)
include("${CMAKE_SOURCE_DIR}/cmake/sal_plugin.cmake")

# 7zip plugin (plus 7za/7zwrapper helper DLLs)
add_subdirectory(7zip)

# Core plugins
add_subdirectory(checksum)
add_subdirectory(diskmap)
add_subdirectory(nethood)
add_subdirectory(folders)
add_subdirectory(splitcbn)
add_subdirectory(peviewer)
add_subdirectory(regedt)
add_subdirectory(renamer)
add_subdirectory(unlha)
add_subdirectory(unrar)
add_subdirectory(unole)
add_subdirectory(uncab)
add_subdirectory(unchm)
add_subdirectory(unmime)
add_subdirectory(unarj)
add_subdirectory(unfat)
add_subdirectory(automation)
add_subdirectory(filecomp)
add_subdirectory(tar)
add_subdirectory(uniso)
add_subdirectory(pak)
add_subdirectory(zip)
add_subdirectory(webviewer)
add_subdirectory(checkver)
add_subdirectory(dbviewer)
add_subdirectory(mmviewer)
add_subdirectory(portables)
add_subdirectory(wmobile)
add_subdirectory(demoplug)
add_subdirectory(undelete)
